[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fuzzywuzzy>=0.18.0",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "pydantic-ai>=0.8.1",
    "pydantic-ai-slim>=0.8.1",
    "python-dateutil>=2.9.0.post0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
    "tensorflow>=2.20.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
